--- a/Loja.Instrumentos.Web/Loja.Instrumentos.Web/Views/Particulars/Create.cshtml
+++ b/Loja.Instrumentos.Web/Loja.Instrumentos.Web/Views/Particulars/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Loja.Instrumentos.Business.Particulars
+﻿@model Loja.Instrumentos.Web.ViewModels.Particulars.ParticularsViewModel
 
 @{
     ViewBag.Title = "Create";
