--- a/Loja.Instrumentos.Web/Loja.Instrumentos.Web/Views/Particulars/Index.cshtml
+++ b/Loja.Instrumentos.Web/Loja.Instrumentos.Web/Views/Particulars/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Loja.Instrumentos.Business.Particulars>
+﻿@model IEnumerable<Loja.Instrumentos.Web.ViewModels.Particulars.ParticularsIndexViewModel>
 
 @{
     ViewBag.Title = "Index";
