--- a/Loja.Instrumentos.Web/Loja.Instrumentos.Web/Views/Particulars/Details.cshtml
+++ b/Loja.Instrumentos.Web/Loja.Instrumentos.Web/Views/Particulars/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@model Loja.Instrumentos.Business.Particulars
-
+﻿@model Loja.Instrumentos.Web.ViewModels.Particulars.ParticularsIndexViewModel
 @{
     ViewBag.Title = "Details";
 }
